# essential-debugger

./: Cargo.toml  README.md  essential-debugger.nix  flake.nix  overlay.nix  shell.nix
src/: autocomplete.rs  lib.rs  main.rs  parse_types.rs  source.rs  state.rs  state_builder.rs
src/source/: tests.rs
src/state_builder/: tests.rs
tests/: bad_solution.json  intent.json  intents.json  intents_vec.json  solution.json  tests.rs
