[package]
edition = "2021"
name = "essential-debugger"
version = "0.2.0"
description = "An experimental constraint debugger for the Essential constraint checking engine"
authors = ["Essential Contributions <contact@essentialcontributions.com>"]
homepage = "https://essential.builders/"
license = "Apache-2.0"
repository = "https://github.com/essential-contributions/essential-debugger"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.16", features = ["derive"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select", "history"] }
essential-constraint-asm = "0.3.0"
essential-constraint-vm = "0.3.0"
essential-hash = "0.2.0"
essential-sign = "0.2.0"
essential-state-asm = "0.3.0"
essential-state-read-vm = "0.3.0"
essential-types = "0.2.0"
hex = "0.4.3"
serde_json = "1"
tokio = { version = "1.39", features = ["full"] }

[dev-dependencies]
rand = { version = "0.8", features = ["small_rng"] }              # For VM tests.
secp256k1 = { version = "0.29", features = ["rand", "recovery"] }
